save current work

--- a/apps/ionic-test/src/app/home/home.page.html
+++ b/apps/ionic-test/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
-    <ion-title> Blank </ion-title>
+    <ion-title> My Home </ion-title>
   </ion-toolbar>
 </ion-header>
 
