implemented post-details with comments-view

--- a/libs/social/src/lib/containers/post-details/post-details.component.html
+++ b/libs/social/src/lib/containers/post-details/post-details.component.html
@@ -22,4 +22,9 @@
       </div>
     </div>
   </ng-template>
+
+  <united-comments-view
+    *ngIf="post$ | async as post"
+    [comments]="post.comments"
+  ></united-comments-view>
 </ion-content>
