--- a/libs/social/src/lib/post-item-view/post-item-view.component.html
+++ b/libs/social/src/lib/post-item-view/post-item-view.component.html
@@ -18,7 +18,7 @@
         </ion-label>
       </ion-col>
       <ion-col class="ion-padding-top" size="2">
-        <ion-button fill="clear">
+        <ion-button fill="clear" (click)="postActionMenu()">
           <ion-icon
             size="large"
             color="primary"
