--- a/libs/social/src/lib/containers/post-list/post-list.component.html
+++ b/libs/social/src/lib/containers/post-list/post-list.component.html
@@ -7,6 +7,7 @@
     <united-post-item-view
       (showPostDetail)="onPostDetail($event)"
       (postLike)="onPostLike($event)"
+      (postDeleted)="onPostDelete($event)"
       *ngIf="posts$ | async as post; else loading"
       [post]="p"
     >
