save current work

--- a/libs/social/src/lib/comments-view/comments-view.component.html
+++ b/libs/social/src/lib/comments-view/comments-view.component.html
@@ -41,7 +41,7 @@
       <ion-button
         slot="start"
         size="small"
-        (click)="likeSelected(comment)"
+        (click)="likeActionMenu(comment)"
         color="medium"
         mode="ios"
       >
