--- a/libs/social/src/lib/containers/post-details/post-details.component.html
+++ b/libs/social/src/lib/containers/post-details/post-details.component.html
@@ -26,6 +26,7 @@
 
   <united-comments-view
     *ngIf="post$ | async as post"
+    (commentLike)="onCommentLike(post.id, $event)"
     [comments]="post.comments"
   ></united-comments-view>
 </ion-content>
