save current work

--- a/libs/social/src/lib/comments-view/comments-view.component.html
+++ b/libs/social/src/lib/comments-view/comments-view.component.html
@@ -52,6 +52,7 @@
 
       <ion-button
         slot="end"
+        [routerLink]="['comments/' + comment.id + '/likes']"
         (click)="showLikes(comment)"
         fill="clear"
         [color]="isSelfLike(comment.likes) ? 'primary' : 'medium'"
