--- a/libs/social/src/lib/containers/post-list/post-list.component.html
+++ b/libs/social/src/lib/containers/post-list/post-list.component.html
@@ -10,6 +10,7 @@
       (postDeleted)="onPostDelete($event)"
       *ngIf="posts$ | async as post; else loading"
       [post]="p"
+      [postLikes]="getPostLikes(p) | async"
     >
     </united-post-item-view>
   </ion-card>
