--- a/libs/social/src/lib/containers/comment-like/comment-like.component.html
+++ b/libs/social/src/lib/containers/comment-like/comment-like.component.html
@@ -3,13 +3,13 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title> Post Likes </ion-title>
+    <ion-title> Comment Likes </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <united-likes-view
+  <!-- <united-likes-view
     *ngIf="post$ | async as post"
     [post]="post"
-  ></united-likes-view>
+  ></united-likes-view> -->
 </ion-content>
