--- a/libs/social/src/lib/containers/post-details/post-details.component.html
+++ b/libs/social/src/lib/containers/post-details/post-details.component.html
@@ -21,6 +21,8 @@
       (commentLike)="onCommentLike(post.id, $event)"
       [comments]="comments"
     ></united-comments-view>
+
+    <united-create-comment></united-create-comment>
   </div>
 </ion-content>
 
