--- a/libs/social/src/lib/containers/post-details/post-details.component.html
+++ b/libs/social/src/lib/containers/post-details/post-details.component.html
@@ -19,12 +19,13 @@
     <united-comments-view
       *ngIf="comments$ | async as comments"
       (commentLike)="onCommentLike(post.id, $event)"
+      (commentDelete)="onCommentDelete(post.id, $event)"
       [comments]="comments"
     ></united-comments-view>
-
-    <united-create-comment></united-create-comment>
   </div>
 </ion-content>
+
+<united-create-comment></united-create-comment>
 
 <ng-template #loading>
   <div class="vertical-center">
