--- a/apps/ionic-test/src/app/home/home.page.html
+++ b/apps/ionic-test/src/app/home/home.page.html
@@ -5,5 +5,5 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <united-post-list></united-post-list>
+  <united-timeline></united-timeline>
 </ion-content>
