--- a/libs/social/src/lib/comments-view/comments-view.component.html
+++ b/libs/social/src/lib/comments-view/comments-view.component.html
@@ -1,4 +1,4 @@
-<ion-row class="wrapper" *ngFor="let comment of comments?.reverse()">
+<ion-row class="wrapper" *ngFor="let comment of comments">
   <!-- SHOW AVATAR OF THE USER -->
   <ion-col size="2">
     <ion-avatar>
