create comment focus handling

--- a/libs/social/src/lib/containers/create-comment/create-comment.component.html
+++ b/libs/social/src/lib/containers/create-comment/create-comment.component.html
@@ -6,6 +6,7 @@
           <textarea
             [rows]="2"
             (focus)="onFocusEvent($event)"
+            (focusout)="onFocusOutEvent($event)"
             [(ngModel)]="commentText"
           >
           </textarea>
