--- a/libs/social/src/lib/containers/edit-comment/edit-comment.component.html
+++ b/libs/social/src/lib/containers/edit-comment/edit-comment.component.html
@@ -7,6 +7,8 @@
             #commentArea
             *ngIf="comment"
             [rows]="2"
+            (focus)="onFocusEvent($event)"
+            (focusout)="onFocusOutEvent($event)"
             [(ngModel)]="editingComment"
           >
           </textarea>
