--- a/libs/social/src/lib/containers/post-list/post-list.component.html
+++ b/libs/social/src/lib/containers/post-list/post-list.component.html
@@ -1,3 +1,9 @@
+<ion-header [translucent]="true">
+  <ion-toolbar color="primary">
+    <ion-title> My Home </ion-title>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content>
   <!-- <div *ngIf="postsError$ | async">
     {{ (postsError$ | async).message }}
