--- a/libs/social/src/lib/likes-view/likes-view.component.html
+++ b/libs/social/src/lib/likes-view/likes-view.component.html
@@ -1,4 +1,4 @@
-<ion-item *ngFor="let liker of post?.likes">
+<ion-item *ngFor="let liker of likes">
   <ion-avatar>
     <ion-img src="../assets/icon/generic-avatar.png"></ion-img>
   </ion-avatar>
