--- a/libs/social/src/lib/post-item-view/post-item-view.component.html
+++ b/libs/social/src/lib/post-item-view/post-item-view.component.html
@@ -41,7 +41,7 @@
       <p
         class="like-count-text"
         *ngIf="post.likes.length; else noLikes"
-        [routerLink]="['/post-details/' + post.id + '/likes']"
+        [routerLink]="['post-details/' + post.id + '/likes']"
       >
         {{ printLikeText(post.likes) }}
       </p>
