--- a/libs/navigation/src/lib/bottom-navigation/bottom-navigation.component.html
+++ b/libs/navigation/src/lib/bottom-navigation/bottom-navigation.component.html
@@ -1,6 +1,6 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="home">
+    <ion-tab-button tab="myhome">
       <ion-icon name="home"></ion-icon>
       <!--      <ion-label>Home</ion-label>-->
     </ion-tab-button>
@@ -15,7 +15,7 @@
       <!--      <ion-label>Trends</ion-label>-->
     </ion-tab-button>
 
-    <ion-tab-button tab="instruments">
+    <ion-tab-button tab="instrument">
       <ion-icon name="search"></ion-icon>
       <!--      <ion-label>Discover</ion-label>-->
     </ion-tab-button>
