--- a/libs/social/src/lib/containers/post-list/post-list.component.scss
+++ b/libs/social/src/lib/containers/post-list/post-list.component.scss
@@ -1,3 +1,15 @@
+.spin {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+ion-spinner {
+  width: 50px;
+  height: 50px;
+}
+
 .comment-cnt-text {
   text-decoration: none;
   display: block;
